--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 
 body
 {
+    display: block;
     min-height: 100vh;
     overflow: auto;
     background: var(--blue);
@@ -68,7 +69,7 @@ img {
 
 .menu {
     position: fixed;
-    width: 100%;
+    width: 101%;
     top: 87px;
     margin-top: 25px;
     background-color: #1c1c1c;
@@ -240,8 +241,9 @@ a {
 }
 
 .home {
-    margin-bottom:5px;
-    left: 270px;
+    position: fixed;
+    left: 355px;
+    top: 130px;
 }
 
 .times {
@@ -253,7 +255,7 @@ a {
     left: 1295px;
 }
 
-/* @media screen and (max-width: 1366px) {
+/* @media screen and (max-width: 100%) {
     .title {
         left: 175px;
     }
