--- a/css/stylejogadores.css
+++ b/css/stylejogadores.css
@@ -152,10 +152,11 @@ img {
 }
 .details .recentOrders table tr td
 {
-    padding: 10px;
+    padding: 5px;
     text-align: center;
     text-transform: uppercase;
     font-family: monospace;
+    width: 100px;
 }
 
 .details .recentOrders table tr td:last-child
